--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -3,27 +3,35 @@
 </mat-toolbar>
   
 <mat-card appearance="outlined">
-    <mat-card-content>
-        <table mat-table [dataSource]="courses" class="mat-elevation-z8">
-            <!--- Note that these columns can be defined in any order.
-                The actual rendered columns are set as a property on the row definition" -->
-        
-            <!-- Position Column -->
-            <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Curso </th>
-            <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
-            </ng-container>
-        
-            <!-- Name Column -->
-            <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef> Categoria </th>
-            <td mat-cell *matCellDef="let course"> {{course.category}} </td>
-            </ng-container>
+    <div *ngIf="courses; else loading">
+        <mat-card-content>
+            <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+                <!--- Note that these columns can be defined in any order.
+                    The actual rendered columns are set as a property on the row definition" -->
             
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-    </mat-card-content>
+                <!-- Position Column -->
+                <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Curso </th>
+                <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
+                </ng-container>
+            
+                <!-- Name Column -->
+                <ng-container matColumnDef="category">
+                <th mat-header-cell *matHeaderCellDef> Categoria </th>
+                <td mat-cell *matCellDef="let course"> {{course.category}} </td>
+                </ng-container>
+                
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </mat-card-content>
+    </div>
+
+    <ng-template #loading>
+        <div class="loading-spiner">
+            <mat-spinner></mat-spinner>
+        </div>
+    </ng-template>
 </mat-card>
   
   
